Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,36 +1,32 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Ercs : Extinction/recolonisation coalescent simulator" />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Ercs by jeromekelleher</title>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="javascripts/scale.fix.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-    <title>Ercs</title>
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
-
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/jeromekelleher/ercs">View on GitHub</a>
-
-          <h1 id="project_title">Ercs</h1>
-          <h2 id="project_tagline">Extinction/recolonisation coalescent simulator</h2>
-
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/jeromekelleher/ercs/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/jeromekelleher/ercs/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+    <div class="wrapper">
+      <header>
+        <h1>Ercs</h1>
+        <p>Extinction/recolonisation coalescent simulator</p>
+        <p class="view"><a href="https://github.com/jeromekelleher/ercs">View the Project on GitHub <small>jeromekelleher/ercs</small></a></p>
+        <ul>
+          <li><a href="https://github.com/jeromekelleher/ercs/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/jeromekelleher/ercs/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/jeromekelleher/ercs">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
+      <section>
         <h1></h1>
 
 <h1>Extinction/recolonisation coalescent simulator</h1>
@@ -46,32 +42,14 @@ torus of diameter <code>L</code>.</li>
 with probability <code>rho[j]</code>.</li>
 <li>An arbitrary number of classes of event occuring at fixed
 rates. </li>
-</ul><p>Ercs supports both Python 2 and 3.</p>
-
-<hr><h2>Documentation</h2>
-
-<p>Here's a quick example for the impatient::</p>
-
-<pre><code>    import ercs
-    sim = ercs.Simulator(10)
-    sim.sample =  [(1, 1), (2, 2), (3, 3)]
-    sim.event_classes = [ercs.DiscEventClass(rate=1.0, u=0.5, r=1)]
-    pi, tau = sim.simulate(1)
-</code></pre>
-
-<p>Full documentation for <code>ercs</code> is available at <code>&lt;http://www.homepages.ed.ac.uk/jkellehe/ercs/doc&gt;</code>_.</p>
+</ul><p>Full documentation available at <a href="docs/index.html">documentation</a></p>
       </section>
     </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Ercs maintained by <a href="https://github.com/jeromekelleher">jeromekelleher</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
+    <footer>
+      <p>Project maintained by <a href="https://github.com/jeromekelleher">jeromekelleher</a></p>
+      <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
+    </footer>
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
     
-
   </body>
 </html>
