--- a/genindex.html
+++ b/genindex.html
@@ -5,13 +5,13 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Index &mdash; ercs v1.0.0 documentation</title>
+    <title>Index &mdash; ercs v1.0.4-dev documentation</title>
     <link rel="stylesheet" href="_static/default.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '',
-        VERSION:     '1.0.0',
+        VERSION:     '1.0.4-dev',
         COLLAPSE_MODINDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -19,7 +19,7 @@
     </script>
     <script type="text/javascript" src="_static/jquery.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
-    <link rel="top" title="ercs v1.0.0 documentation" href="index.html" /> 
+    <link rel="top" title="ercs v1.0.4-dev documentation" href="index.html" /> 
   </head>
   <body>
     <div class="related">
@@ -31,7 +31,7 @@
         <li class="right" >
           <a href="modindex.html" title="Global Module Index"
              accesskey="M">modules</a> |</li>
-        <li><a href="index.html">ercs v1.0.0 documentation</a> &raquo;</li> 
+        <li><a href="index.html">ercs v1.0.4-dev documentation</a> &raquo;</li> 
       </ul>
     </div>  
 
@@ -43,7 +43,7 @@
 
    <h1 id="index">Index</h1>
 
-   <a href="#_"><strong>_</strong></a> | <a href="#D"><strong>D</strong></a> | <a href="#E"><strong>E</strong></a> | <a href="#G"><strong>G</strong></a> | <a href="#M"><strong>M</strong></a> | <a href="#S"><strong>S</strong></a> | <a href="#T"><strong>T</strong></a> 
+   <a href="#_"><strong>_</strong></a> | <a href="#D"><strong>D</strong></a> | <a href="#E"><strong>E</strong></a> | <a href="#G"><strong>G</strong></a> | <a href="#K"><strong>K</strong></a> | <a href="#M"><strong>M</strong></a> | <a href="#N"><strong>N</strong></a> | <a href="#R"><strong>R</strong></a> | <a href="#S"><strong>S</strong></a> | <a href="#T"><strong>T</strong></a> 
 
    <hr />
 
@@ -66,7 +66,9 @@
 <table width="100%" class="indextable"><tr><td width="33%" valign="top">
 <dl>
 
-<dt><a href="index.html#module-ercs">ercs (module)</a></dt></dl></td><td width="33%" valign="top"><dl>
+<dt><a href="index.html#module-ercs">ercs (module)</a></dt>
+<dt><a href="index.html#ercs.Simulator.event_classes">event_classes (ercs.Simulator attribute)</a></dt></dl></td><td width="33%" valign="top"><dl>
+<dt><a href="index.html#ercs.EventClass">EventClass (class in ercs)</a></dt>
 </dl></td></tr></table>
 
 <h2 id="G">G</h2>
@@ -77,21 +79,44 @@
 <dt><a href="index.html#ercs.MRCACalculator.get_mrca">get_mrca() (ercs.MRCACalculator method)</a></dt></dl></td><td width="33%" valign="top"><dl>
 </dl></td></tr></table>
 
+<h2 id="K">K</h2>
+<table width="100%" class="indextable"><tr><td width="33%" valign="top">
+<dl>
+
+<dt><a href="index.html#ercs.Simulator.kdtree_bucket_size">kdtree_bucket_size (ercs.Simulator attribute)</a></dt></dl></td><td width="33%" valign="top"><dl>
+</dl></td></tr></table>
+
 <h2 id="M">M</h2>
 <table width="100%" class="indextable"><tr><td width="33%" valign="top">
 <dl>
 
-<dt><a href="index.html#ercs.MRCACalculator">MRCACalculator (class in ercs)</a></dt></dl></td><td width="33%" valign="top"><dl>
+<dt><a href="index.html#ercs.Simulator.max_kdtree_insertions">max_kdtree_insertions (ercs.Simulator attribute)</a></dt>
+<dt><a href="index.html#ercs.Simulator.max_lineage_memory">max_lineage_memory (ercs.Simulator attribute)</a></dt>
+<dt><a href="index.html#ercs.Simulator.max_time">max_time (ercs.Simulator attribute)</a></dt></dl></td><td width="33%" valign="top"><dl>
+<dt><a href="index.html#ercs.MRCACalculator">MRCACalculator (class in ercs)</a></dt>
+</dl></td></tr></table>
+
+<h2 id="N">N</h2>
+<table width="100%" class="indextable"><tr><td width="33%" valign="top">
+<dl>
+
+<dt><a href="index.html#ercs.Simulator.num_parents">num_parents (ercs.Simulator attribute)</a></dt></dl></td><td width="33%" valign="top"><dl>
+</dl></td></tr></table>
+
+<h2 id="R">R</h2>
+<table width="100%" class="indextable"><tr><td width="33%" valign="top">
+<dl>
+
+<dt><a href="index.html#ercs.Simulator.recombination_probabilities">recombination_probabilities (ercs.Simulator attribute)</a></dt>
+<dt><a href="index.html#ercs.Simulator.run">run() (ercs.Simulator method)</a></dt></dl></td><td width="33%" valign="top"><dl>
 </dl></td></tr></table>
 
 <h2 id="S">S</h2>
 <table width="100%" class="indextable"><tr><td width="33%" valign="top">
 <dl>
 
-<dt><a href="index.html#ercs.Simulator.simulate">simulate() (ercs.Simulator method)</a></dt>
-  <dd><dl>
-    <dt><a href="index.html#_ercs.simulate">(in module _ercs)</a></dt>
-  </dl></dd></dl></td><td width="33%" valign="top"><dl>
+<dt><a href="index.html#ercs.Simulator.sample">sample (ercs.Simulator attribute)</a></dt>
+<dt><a href="index.html#_ercs.simulate">simulate() (in module _ercs)</a></dt></dl></td><td width="33%" valign="top"><dl>
 <dt><a href="index.html#ercs.Simulator">Simulator (class in ercs)</a></dt>
 </dl></td></tr></table>
 
@@ -99,6 +124,7 @@
 <table width="100%" class="indextable"><tr><td width="33%" valign="top">
 <dl>
 
+<dt><a href="index.html#ercs.Simulator.torus_diameter">torus_diameter (ercs.Simulator attribute)</a></dt>
 <dt><a href="index.html#ercs.torus_distance">torus_distance() (in module ercs)</a></dt></dl></td><td width="33%" valign="top"><dl>
 </dl></td></tr></table>
 
@@ -138,7 +164,7 @@
         <li class="right" >
           <a href="modindex.html" title="Global Module Index"
              >modules</a> |</li>
-        <li><a href="index.html">ercs v1.0.0 documentation</a> &raquo;</li> 
+        <li><a href="index.html">ercs v1.0.4-dev documentation</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer">
