Docs in mostly finished draft state.

--- a/genindex.html
+++ b/genindex.html
@@ -138,7 +138,7 @@
   </dt>
 
       
-  <dt><a href="index.html#ercs.Simulator.max_lineage_memory">max_lineage_memory (ercs.Simulator attribute)</a>
+  <dt><a href="index.html#ercs.Simulator.max_lineages">max_lineages (ercs.Simulator attribute)</a>
   </dt>
 
   </dl></td>
