--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Extinction/recolonisation coalescent simulator &mdash; ercs 1.0.1b1 documentation</title>
+    <title>Extinction/recolonisation coalescent simulator &mdash; ercs 1.0.1 documentation</title>
     
     <link rel="stylesheet" href="_static/default.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
@@ -16,7 +16,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '',
-        VERSION:     '1.0.1b1',
+        VERSION:     '1.0.1',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -25,7 +25,7 @@
     <script type="text/javascript" src="_static/jquery.js"></script>
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
-    <link rel="top" title="ercs 1.0.1b1 documentation" href="#" /> 
+    <link rel="top" title="ercs 1.0.1 documentation" href="#" /> 
   </head>
   <body>
     <div class="related">
@@ -37,7 +37,7 @@
         <li class="right" >
           <a href="py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li><a href="#">ercs 1.0.1b1 documentation</a> &raquo;</li> 
+        <li><a href="#">ercs 1.0.1 documentation</a> &raquo;</li> 
       </ul>
     </div>  
 
@@ -1025,7 +1025,7 @@ Programming</em>, 2011.</td></tr>
         <li class="right" >
           <a href="py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li><a href="#">ercs 1.0.1b1 documentation</a> &raquo;</li> 
+        <li><a href="#">ercs 1.0.1 documentation</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer">
